PyMaker/datas/object2/RawHTML/i6101/Python_DOC_referPages.declaring-a-variable-in-python-with-the-name-class.txt
<div class="post-text" itemprop="text">
<p>I'd like to declare a variable (string, in this case) as such:</p>
<pre><code>class = "this is my string"
</code></pre>
<p>In Python <strong>(3.6.3)</strong>, and I get an error:</p>
<pre><code>class = "This is my string"
      ^
SyntaxError: invalid syntax
</code></pre>
<p>It obviously doesn't like the fact that I'm using an equal sign (<code>=</code>) after <code>class</code>. </p>
<p>Let's say I really need to have a variable with the name <code>class</code>, and I can't change it to <code>myClass</code> or whatsoever, what would be the correct way of doing something as such?</p>
</div>
<div class="post-text" itemprop="text">
<p>Thankfully Python doesn't allow you to do this, <code>class</code> is a keyword that can't be used as an identifier. One alternative also mentioned in <a href="https://www.python.org/dev/peps/pep-0008/#descriptive-naming-styles" rel="nofollow noreferrer">PEP 8</a> is using a trailing underscore:</p>
<pre><code>class_ = ...
</code></pre>
<p>but you really should avoid such names since they <em>mostly</em> serve to confuse. You should always strive for more descriptive ones.</p>
<p>If <code>class</code> is the only option, the other (somewhat) viable approach would be to use a dictionary:</p>
<pre><code>&gt;&gt;&gt; names = {'class': 'something'}
&gt;&gt;&gt; names['class']
'something'
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You cannot do that, as it explicitly stated in the Python documentation:</p>
<p><a href="https://i.stack.imgur.com/bzIZs.png" rel="nofollow noreferrer"><img alt="enter image description here" src="https://i.stack.imgur.com/bzIZs.png"/></a></p>
<p><a href="https://docs.python.org/3.0/reference/lexical_analysis.html" rel="nofollow noreferrer">link to the documentation</a></p>
</div>
<div class="post-text" itemprop="text">
<p>It is not possible, however it is some kind of a tradition in Python to append class _ to get a new identifier</p>
<p>Use like this:</p>
<pre><code>class_ = "This is my string"
</code></pre>
<p>You can <a href="https://docs.python.org/3/reference/lexical_analysis.html#keywords" rel="nofollow noreferrer">read Official Documentation</a> </p>
</div>
<div class="post-text" itemprop="text">
<p>You can't declare reserved words as variables.</p>
</div>
<span class="comment-copy">just don't do that</span>
<span class="comment-copy">Got it! Thought perhaps there's a library or something that could potentially do this, hence I asked. I'm quite new to Python! Nevertheless, thanks heaps :)</span>
<span class="comment-copy">@Sina Most languages don't allow you to use reserved keywords as variable names. This has nothing to do with libraries or Python.</span>
<span class="comment-copy">@deceze,"<b>most</b> languages", you said. Exactly :)</span>
